# url-classifier-exceptions-manager

./: Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml  requirements.in  requirements.txt
src/url_classifier_exceptions_manager/: __main__.py  auto.py  bugzilla.py  constants.py  exceptionEntry.py  remoteSettings.py
tests/: test_parse_rs_record.py
tools/: BugWhiteboard.py  GlobalExceptions.py  RemoteSettingsEntry.py  bz.py  close-bugs.py  process-annotated-bugs.py
